[metadata]
name = harmon
version = 0.1.0
author = Mahdi Khodabandeh
author_email = 20.mahdikh.0@gmail.com
description = A chess engine that considers human mistakes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/khoda81/harmon
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = ^3.9

[options.packages.find]
where = src
